--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@ant-design/icons": "^4.6.4",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/drawer": "^5.12.9",
     "@react-navigation/native": "^5.9.8",
