--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@ant-design/icons": "^4.6.4",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/drawer": "^5.12.9",
+    "@react-navigation/material-bottom-tabs": "^5.3.19",
     "@react-navigation/native": "^5.9.8",
     "@react-navigation/stack": "^5.14.9",
     "react": "17.0.2",
