--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/stack": "^5.14.9",
     "react": "17.0.2",
     "react-native": "0.65.1",
+    "react-native-animatable": "^1.3.3",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-paper": "^4.9.2",
